--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,10 @@
     "bootstrap-icons": "^1.11.3",
     "cookie": "^1.0.2",
     "html-react-parser": "^5.2.2",
+    "js-cookie": "^3.0.5",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-image-gallery": "^1.4.0",
